[project]
name = "cognitive-runtime"
version = "0.1.0"
description = "A modular neuro-symbolic cognitive architecture"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "networkx>=3.4.2",
    "pydantic-settings>=2.7.1",
    "pydantic>=2.10.5",
    "structlog>=24.4.0",
    "typer>=0.15.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "B", "A", "C4", "SIM", "ARG"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[project.scripts]
cognitive-runtime = "cognitive_runtime.cli.main:app"
